// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers coins should handle GET_COIN_PRICE_SUCCESS 1`] = `
Object {
  "data": Array [],
  "exchanges": Array [],
  "prices": Object {
    "foo": "bar",
  },
  "symbols": Array [],
}
`;

exports[`reducers coins should handle GET_COINS_SUCCESS 1`] = `
Object {
  "data": Array [
    Object {
      "Name": "foo",
    },
  ],
  "exchanges": Array [],
  "prices": Object {},
  "symbols": Array [],
}
`;

exports[`reducers coins should handle GET_EXCHANGE_LIST_SUCCESS 1`] = `
Object {
  "data": Array [],
  "exchanges": Array [
    "foo",
  ],
  "prices": Object {},
  "symbols": Array [],
}
`;

exports[`reducers coins should handle GET_SYMBOL_LIST_SUCCESS 1`] = `
Object {
  "data": Array [],
  "exchanges": Array [],
  "prices": Object {},
  "symbols": Array [
    "foo",
  ],
}
`;

exports[`reducers coins should handle initial state 1`] = `
Object {
  "data": Array [],
  "exchanges": Array [],
  "prices": Object {},
  "symbols": Array [],
}
`;

exports[`reducers coins should handle unknown action type 1`] = `
Object {
  "data": Array [],
  "exchanges": Array [],
  "prices": Object {},
  "symbols": Array [],
}
`;
